--- a/Data preparation.DeNoPa.Rmd
+++ b/Data preparation.DeNoPa.Rmd
@@ -266,6 +266,18 @@ df_D$olfaction[is.na(df_D$SST.ID)] <- NA
 ```
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE}
+df_D <- df_D %>% select(-c(month, group.final, PD.NMS.02, leave.Visit))
+
+# reorder columns
+df_D <- df_D[, c("ID", "EVENT_ID", "group", "diagnosis","sex", "age", "ethnic", "disease.duration", "last_month",
+                 "SS.ID.01.B", "SS.ID.02.B", "SS.ID.03.B", "SS.ID.04.B", "SS.ID.05.B", "SS.ID.06.B", "SS.ID.07.B", "SS.ID.08.B",
+                 "SS.ID.09.B", "SS.ID.10.B", "SS.ID.11.B", "SS.ID.12.B", "SS.ID.13.B", "SS.ID.14.B", "SS.ID.15.B", "SS.ID.16.B",
+                 "SS.ID.01.M", "SS.ID.02.M", "SS.ID.03.M", "SS.ID.04.M", "SS.ID.05.M", "SS.ID.06.M", "SS.ID.07.M", "SS.ID.08.M",
+                 "SS.ID.09.M", "SS.ID.10.M", "SS.ID.11.M", "SS.ID.12.M", "SS.ID.13.M", "SS.ID.14.M", "SS.ID.15.M", "SS.ID.16.M",
+                 "SST.ID", "SST.TH", "SST.DS", "olfaction", "nMissing")]
+```
+
+```{r, echo=FALSE, message=FALSE, warning=FALSE}
 write.csv(df_D, file = "DeNoPa_cut.csv", row.names=FALSE)
 ```
 
