--- a/3. Abbreviated Smell Test UPSIT.qmd
+++ b/3. Abbreviated Smell Test UPSIT.qmd
@@ -155,7 +155,7 @@ pFigure_3a <- ggplot(dfPlt, aes(item, auc, fill = rank_ave, color = rank_ave)) +
   theme_bw()+
   theme(legend.position = "none",
         axis.title.y = element_blank(),
-        text = element_text(size = 12),
+        text = element_text(size = 11),
         axis.text.y=
           element_text(face= scent_face))
 ```
@@ -206,7 +206,7 @@ levels(df_long$item) <- scent_rank
 #| fig-height: 7.5
 
 df_long$group <- factor(df_long$group, levels = group_name[1:2])
-p1 <- ggplot(df_long, aes(item, prop2, fill = group))+
+pFigure_3b <- ggplot(df_long, aes(item, prop2, fill = group))+
   geom_col(position = "identity", width = 0.5, alpha = 0.8) +
   scale_fill_manual(values = group.colors)+
   labs(y = "% of correct scent identification")+
@@ -218,8 +218,7 @@ p1 <- ggplot(df_long, aes(item, prop2, fill = group))+
         axis.text.y = element_blank(),
         axis.title.y = element_blank(),
         text = element_text(size=11))
-print(ggarrange(pFigure_3a, p1, ncol = 2, widths = c(1, 0.8)))
-
+print(ggarrange(pFigure_3a, pFigure_3b, ncol = 2, widths = c(1, 0.8)))
 ```
 
 ### Supplemental Figure 2 (b)
@@ -251,6 +250,17 @@ p2 <- ggplot(df_D_diff, aes(item, diff, fill = as.numeric(item)))+
         legend.position = "none") +
   ylim(0, 52) 
 print(p2)
+```
+
+```{r}
+#| echo: false
+#| warning: false
+#| message: false
+#| fig-width: 9
+#| fig-height: 7.5
+
+p2 <- p2 + theme(axis.text.y = element_blank())
+ggarrange(pFigure_3a, pFigure_3b, p2, ncol = 3, widths = c(1, 0.8, 0.8))
 ```
 
 ## Compare with other published item rankings
@@ -752,7 +762,7 @@ levels(df_D_diff$item) <- scent_rank
 p2 <- ggplot(df_D_diff, aes(item, diff, fill = as.numeric(item)))+
   geom_col(width = 0.5, alpha = 0.8) +
   viridis::scale_fill_viridis(option = "C", direction = -1, begin = 0, end = 0.8)+
-  labs(y = paste0("% ", group_name[1], " - % ", group_name[2])) +
+  labs(y = paste0("% ", group_name[3], " - % ", group_name[2])) +
   coord_flip()+
   theme_bw()+
   theme(axis.text.y = element_blank(),
@@ -1026,6 +1036,8 @@ saveRDS(dfPlt, "Generated files/df_sex_P.rds")
 
 ## % correct by age - Ottawa Trial
 
+*Note:* Below results cannot be reproduced if you are using the further de-identified data from zenodo, which contains `age_cat` instead of `age`
+
 ```{r}
 #| echo: false
 #| warning: false
@@ -1109,6 +1121,8 @@ saveRDS(df_long_Age, "Generated files/df_age_O.rds")
 ```
 
 ## % correct by age - PROBE
+
+*Note:* Below results cannot be reproduced if you are using the further de-identified data from zenodo, which contains `age_cat` instead of `age`
 
 ```{r}
 #| echo: false
